data/all_generated_tests/raw_wast_tests/return_InfiniteLoops_2749.wast
;; 8. **Loop with Interleaved Condition Checks and Returns**: Design a function with interleaved `br_if` instructions and conditional returns within a loop. Validate correct exit from the loop based on conditions where improper operand handling leads to infinite looping.

(assert_invalid
  (module
    (func $loop-with-condition-check-and-return (param i32) (result i32)
      (local i32)
      (loop 
        (local.set 1 (i32.const 0))
        (br_if 0 (i32.eq (local.get 0) (i32.const 0)))
        (return (i32.add (local.get 0) (local.get 1)))
      )
    )
  )
  "type mismatch"
)